z-index correction

--- a/style.css
+++ b/style.css
@@ -761,7 +761,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(165, 147, 99, 0.7);
+    background-color: rgba(111, 98, 65, 0.7);
     padding: 40px 40px 40px 40px;
 }
 
@@ -828,11 +828,12 @@ h4 {
 
 .bg-banniere {
     background-image: url("img/la-chouette-agence-banniere.jpg");
-    z-index: -2;
+    z-index: 0;
 }
 
 .bg-presentation {
     background-image: url("img/image-de-presentation.jpg");
+    z-index: 0;
 }
 
 @media (max-width: 1024px) {
